--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -99,6 +99,14 @@ item.charm.fallingprotection.name=Charm of Falling Protection
 item.charm.haste.name=Charm of Haste
 item.charm.criticalstrike.name=Charm of Critical Strike
 item.charm.seconddurability.name=Charm of Second Durability
+item.charm.voidrescue.name=Charm of Void Rescue
+item.charm.slaughterimpact.name=Charm of Slaughter Impact
+
+charm.damage=Damage
+charm.speed=Speed
+charm.regen=Health Regeneration Speed
+charm.damagetaken=Damage Taken
+charm.experience=Experience
 
 entity.dragon.derpy.name=Derpy Overgrown Reptile
 entity.dragon.baby.name=Baby Ender Dragon
