--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -102,11 +102,19 @@ item.charm.seconddurability.name=Charm of Second Durability
 item.charm.voidrescue.name=Charm of Void Rescue
 item.charm.slaughterimpact.name=Charm of Slaughter Impact
 
-charm.damage=Damage
-charm.speed=Speed
-charm.regen=Health Regeneration Speed
-charm.damagetaken=Damage Taken
-charm.experience=Experience
+charm.damage=damage
+charm.speed=speed
+charm.regen=health regeneration speed
+charm.damagetaken=damage taken
+charm.experience=experience
+charm.digspd=dig speed
+charm.blocks=blocks
+charm.reflect=reflect
+charm.recover=recover
+charm.durability=durability
+charm.deal=deal
+charm.chanceto=chance to
+charm.whenblocking=when blocking
 
 entity.dragon.derpy.name=Derpy Overgrown Reptile
 entity.dragon.baby.name=Baby Ender Dragon
