--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -37,6 +37,9 @@ tile.endermanHead.name=Enderman Head
 tile.sphalerite.name=Sphalerite
 tile.sphalerite.stardust.name=Sphalerite with Stardust
 tile.ravagedBrick.name=Ravaged Brick
+tile.ravagedBrickSlab.name=Ravaged Brick Slab
+tile.ravagedBrickStairs.name=Ravaged Brick Stairs
+tile.ravagedBrickSmooth.name=Smooth Ravaged Brick
 tile.dungeonPuzzle.unlit.name=Dungeon Puzzle (Unlit)
 tile.dungeonPuzzle.lit.name=Dungeon Puzzle (Lit)
 tile.dungeonPuzzle.wall.name=Dungeon Puzzle (Wall)
