Ravaged Dungeon descend designs, Ravaged decors

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -37,9 +37,11 @@ tile.endermanHead.name=Enderman Head
 tile.sphalerite.name=Sphalerite
 tile.sphalerite.stardust.name=Sphalerite with Stardust
 tile.ravagedBrick.name=Ravaged Brick
+tile.ravagedBrickSmooth.name=Smooth Ravaged Brick
+tile.ravagedBrickGlow.name=Glowing Ravaged Brick
 tile.ravagedBrickSlab.name=Ravaged Brick Slab
 tile.ravagedBrickStairs.name=Ravaged Brick Stairs
-tile.ravagedBrickSmooth.name=Smooth Ravaged Brick
+tile.ravagedBrickFence.name=Ravaged Brick Fence
 tile.dungeonPuzzle.unlit.name=Dungeon Puzzle (Unlit)
 tile.dungeonPuzzle.lit.name=Dungeon Puzzle (Lit)
 tile.dungeonPuzzle.wall.name=Dungeon Puzzle (Wall)
