--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -109,17 +109,26 @@ item.charm.slaughterimpact.name=Charm of Slaughter Impact
 
 charm.damage=damage
 charm.speed=speed
+charm.health=health
 charm.regen=health regeneration speed
 charm.damagetaken=damage taken
 charm.experience=experience
-charm.digspd=dig speed
+charm.digspeed=dig speed
 charm.blocks=blocks
-charm.reflect=reflect
+charm.reflected=reflected
 charm.recover=recover
 charm.durability=durability
 charm.deal=deal
+charm.cause=cause
 charm.chanceto=chance to
 charm.whenblocking=when blocking
+charm.hungerbar=hunger bar
+charm.potionlevel=level
+charm.effect=effect
+charm.seconds=seconds
+charm.and=and
+charm.per=per
+charm.for=for
 
 entity.dragon.derpy.name=Derpy Overgrown Reptile
 entity.dragon.baby.name=Baby Ender Dragon
