--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -86,49 +86,47 @@ item.rune.vigor.name=Rune of Vigor
 item.rune.defense.name=Rune of Defense
 item.rune.magic.name=Rune of Magic
 item.rune.void.name=Rune of Void
-item.charm.basicpower.name=Charm of Power
-item.charm.basicagility.name=Charm of Agility
-item.charm.basicvigor.name=Charm of Vigor
-item.charm.basicdefense.name=Charm of Defense
-item.charm.basicmagic.name=Charm of Magic
-item.charm.equality.name=Charm of Equality
-item.charm.blocking.name=Charm of Blocking
-item.charm.blockingreflection.name=Charm of Blocking Reflection
-item.charm.digestiverecover.name=Charm of Digestive Recover
-item.charm.lifesteal.name=Charm of Life Steal
-item.charm.damageredirection.name=Charm of Damage Redirection
-item.charm.magicpenetration.name=Charm of Magic Penetration
-item.charm.witcheryharm.name=Charm of Witchery Harm
-item.charm.witcherydefense.name=Charm of Witchery Defense
-item.charm.fallingprotection.name=Charm of Falling Protection
-item.charm.haste.name=Charm of Haste
-item.charm.criticalstrike.name=Charm of Critical Strike
-item.charm.seconddurability.name=Charm of Second Durability
-item.charm.voidrescue.name=Charm of Void Rescue
-item.charm.slaughterimpact.name=Charm of Slaughter Impact
 
-charm.damage=damage
-charm.speed=speed
-charm.health=health
-charm.regen=health regeneration speed
-charm.damagetaken=damage taken
-charm.experience=experience
-charm.digspeed=dig speed
-charm.blocks=blocks
-charm.reflected=reflected
-charm.recover=recover
-charm.durability=durability
-charm.deal=deal
-charm.cause=cause
-charm.chanceto=chance to
-charm.whenblocking=when blocking
-charm.hungerbar=hunger bar
-charm.potionlevel=level
-charm.effect=effect
-charm.seconds=seconds
-charm.and=and
-charm.per=per
-charm.for=for
+item.charm.basicpower.name=Charm of Power
+item.charm.basicpower.tooltip=+$0 damage
+item.charm.basicagility.name=Charm of Agility
+item.charm.basicagility.tooltip=+$0 speed
+item.charm.basicvigor.name=Charm of Vigor
+item.charm.basicvigor.tooltip=+$0 health regeneration speed
+item.charm.basicdefense.name=Charm of Defense
+item.charm.basicdefense.tooltip=-$0 damage taken
+item.charm.basicmagic.name=Charm of Magic
+item.charm.basicmagic.tooltip=+$0 experience
+item.charm.equality.name=Charm of Equality
+item.charm.equality.tooltip=+$0 damage\n+$1 speed\n+$2 health regeneration speed\n-$3 damage taken\n+$4 experience
+item.charm.blocking.name=Charm of Blocking
+item.charm.blocking.tooltip=-$0 damage taken when blocking
+item.charm.blockingreflection.name=Charm of Blocking Reflection
+item.charm.blockingreflection.tooltip=-$0 damage taken and $1 reflected when blocking
+item.charm.digestiverecover.name=Charm of Digestive Recover
+item.charm.digestiverecover.tooltip=$0 health per 1 hunger bar
+item.charm.lifesteal.name=Charm of Life Steal
+item.charm.lifesteal.tooltip=
+item.charm.damageredirection.name=Charm of Damage Redirection
+item.charm.damageredirection.tooltip=
+item.charm.magicpenetration.name=Charm of Magic Penetration
+item.charm.magicpenetration.tooltip=
+item.charm.witcheryharm.name=Charm of Witchery Harm
+item.charm.witcheryharm.tooltip=$0 chance to cause level $1 effect for $2 seconds
+item.charm.witcherydefense.name=Charm of Witchery Defense
+item.charm.witcherydefense.tooltip=
+item.charm.fallingprotection.name=Charm of Falling Protection
+item.charm.fallingprotection.tooltip=+$0 blocks
+item.charm.haste.name=Charm of Haste
+item.charm.haste.tooltip=+$0 dig speed
+item.charm.criticalstrike.name=Charm of Critical Strike
+item.charm.criticalstrike.tooltip=$0 chance to deal $1 critical damage
+item.charm.seconddurability.name=Charm of Second Durability
+item.charm.seconddurability.tooltip=$0 chance to recover $1 durability
+item.charm.voidrescue.name=Charm of Void Rescue
+item.charm.voidrescue.tooltip=
+item.charm.slaughterimpact.name=Charm of Slaughter Impact
+item.charm.slaughterimpact.tooltip=
 
 entity.dragon.derpy.name=Derpy Overgrown Reptile
 entity.dragon.baby.name=Baby Ender Dragon
