More charms! More refactoring!

--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -103,18 +103,22 @@ item.charm.blocking.name=Charm of Blocking
 item.charm.blocking.tooltip=-$0 damage taken when blocking
 item.charm.blockingreflection.name=Charm of Blocking Reflection
 item.charm.blockingreflection.tooltip=-$0 damage taken and $1 reflected when blocking
+item.charm.blockingrepulsion.name=Charm of Blocking Repulsion
+item.charm.blockingrepulsion.tooltip=-$0 damage taken and $1x knockback repulsed
 item.charm.digestiverecover.name=Charm of Digestive Recover
 item.charm.digestiverecover.tooltip=$0 health per 1 hunger bar
 item.charm.lifesteal.name=Charm of Life Steal
-item.charm.lifesteal.tooltip=
+item.charm.lifesteal.tooltip=$0 health gained per $1 health dealt
 item.charm.damageredirection.name=Charm of Damage Redirection
-item.charm.damageredirection.tooltip=
+item.charm.damageredirection.tooltip=$0 damage redirected to $1 nearby creature(s)
 item.charm.magicpenetration.name=Charm of Magic Penetration
-item.charm.magicpenetration.tooltip=
+item.charm.magicpenetration.tooltip=$0 of dealt damage penetrates armor using magic
 item.charm.witcheryharm.name=Charm of Witchery Harm
 item.charm.witcheryharm.tooltip=$0 chance to cause level $1 effect for $2 seconds
 item.charm.witcherydefense.name=Charm of Witchery Defense
 item.charm.witcherydefense.tooltip=
+item.charm.magicdefense.name=Charm of Magic Defense
+item.charm.magicdefense.tooltip=-$0 magic damage taken
 item.charm.fallingprotection.name=Charm of Falling Protection
 item.charm.fallingprotection.tooltip=+$0 blocks
 item.charm.haste.name=Charm of Haste
@@ -126,7 +130,7 @@ item.charm.seconddurability.tooltip=$0 chance to recover $1 durability
 item.charm.voidrescue.name=Charm of Void Rescue
 item.charm.voidrescue.tooltip=
 item.charm.slaughterimpact.name=Charm of Slaughter Impact
-item.charm.slaughterimpact.tooltip=
+item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
 
 entity.dragon.derpy.name=Derpy Overgrown Reptile
 entity.dragon.baby.name=Baby Ender Dragon
