--- a/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
+++ b/src/main/resources/assets/hardcoreenderexpansion/lang/en_US.lang
@@ -133,6 +133,7 @@ item.charm.slaughterimpact.name=Charm of Slaughter Impact
 item.charm.slaughterimpact.tooltip=$0 damage dealt in $1 radius on kill
 item.charm.lastresort.name=Charm of Last Resort
 item.charm.lastresort.tooltip=Teleports $0 blocks away from finishing hit with cooldown of $1 seconds
+item.charm.cannotstack=This charm will not stack effects with other charms of this type!
 
 entity.dragon.derpy.name=Derpy Overgrown Reptile
 entity.dragon.baby.name=Baby Ender Dragon
